blogingress/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogging-ingress2
  labels:
    app: blogging-application
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: "http://blog.cessmedia.com>"
    http:
      paths:
        # path: /blogs/(.*)
        path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: blogging-svc
            port:
              number: 80
